version 0.47, unstable, December 2, 2008, svn 551
	
* Fixed a POST-binary bug, where an extra check was preventing direct
   posting.
   Thanks to Alex <alex2048@gmail.com> and Gary Fitts <gary@intouchgroup.com>
	
* Fixed a bug on 64-bit ubuntoo, originating most probably from the
   wrong compiler optimization and running on an SMP machine, where 
   configuration files has failed to be loaded.
   Thanks to Sergei Shnaidman <sergei.shnaidman@qik.com> for 
   reporting, debugging and testing the fix.

* Integrated a great contribution from Gary Fitts <gary@intouchgroup.com>
  - template URL, where throusands URLs specifying by a single template is an option;
  - fetching of response tokens from the bodies of responses and usage them in template URL;
  - usage of statically defined in file tokens for template URL;
  - fixing of several bugs in that area
  - introduced new tags: 
   URL_TEMPLATE, RESPONSE_TOKEN, URL_TOKEN, URL_TOKEN_FILE

* UPLOAD_FILE bug fixed, where the same file-pointer for uploading was shared 
   among mulitple clients. Thanks to  Gary Fitts <gary@intouchgroup.com>.
	
*  Added for "Template URL" README and man pages, usage examples.


version 0.46, unstable, Sep 3, 2008, svn 534

* Advanced to curl-7.19.0 with more relevant fixes, particular in the
  area of multi-transfer and FTP bug fixes.
	
* Compilation fix for some linux-distros, like recent gentoo, by adding 
  #include <limits.h> in ip_secondary.c. Thanks to Aleksandar Lazic <al-curlloader@none.at>
  for reporting it.

* Proxy authentication bug fixed by Francois Pesce <francois.pesce@gmail.com>
  curl-loader now tested and works with proxies.

version 0.45, unstable, May 17, 2008, svn 531

* Advanced to libevent-1.4.4, which is supposed to deliver
  better performance for high loads

* Corrected the patch changing the NEVENT number.
  The patch was not applied in previous versions, limiting the number
   of virtual clients to only 32K


version 0.44, stable, October 21, 2007, svn 524
